# LaMDA-rlhf-pytorch

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  train.py  train_sentencepiece_tokenizer.py
.github/: FUNDING.yml
config/: config.py  dataloader_config.py
dataloader/: stream_dataloader.py
lamda_pytorch/: __init__.py  build_dataloader.py  lamda_pytorch.py  lora.py  stream_dataloader.py
lamda_pytorch/config/: colossal_config.py  config.py  zero_config.py
lamda_pytorch/utils/: utils.py
utils/: utils.py
wandb/: latest-run
wandb/run-20220718_214556-32iw54a6/: run-32iw54a6.wandb
wandb/run-20220718_214556-32iw54a6/files/: conda-environment.yaml  config.yaml  requirements.txt  wandb-metadata.json
