[tool.poetry]
name = "lamda-pytorch"
version = "0.1.0"
description = "Open-source pre-training implementation of Google's LaMDA in PyTorch. The totally not sentient AI."
license = "MIT"
authors = ["Enrico Shippole <your.email@at.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.12.0"
einops = "^0.4.1"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
